# learn_cmake

add_library/: CMakeLists.txt
add_library/include/: lib_source.h
add_library/src/: lib_source.cpp
use_lib/: CMakeLists.txt  use_lib.cpp
